[GLT-3825] updated to Java 17 (#2736)